package Arcade;


import javafx.scene.image.Image;

public class Character {
    private static Image image;

    public void createCharacter(){

    }

    public void displayCharacter(){

    }

}
