package Arcade.CowGame;

import javafx.application.Application;

public class Main {
    public static void main(String[] args) {

        //Application.launch(MainFX.class, args);
    }
}