package Arcade.DinoGame;

import Arcade.Character;

public class CharacterDinoGame extends Character {
}
