package Arcade.DinoGame;

import Arcade.GUIInterface;
import Arcade.Game;
import javafx.stage.Stage;

public class DinoGame extends Game implements GUIInterface {

    @Override
    public void startGame() {

    }
}
