package Arcade.DinoGame;

import Arcade.GUI;

public class GUIDinoGame extends GUI {
}
