package Arcade.DinoGame;

import Arcade.Prop;

public class PropDinoGame extends Prop {
}
