package Arcade.FlappyBird;

import Arcade.Character;

public class CharacterFlappyBird extends Character {
}
