package Arcade.FlappyBird;

import Arcade.GUIInterface;
import Arcade.Game;

public class FlappyBird extends Game implements GUIInterface {

    public void startGame(){

    }
}
