package Arcade.FlappyBird;

import Arcade.GUI;

public class GUIFlappyBird extends GUI {
}
