package Arcade.FlappyBird;

import Arcade.Prop;

public class PropFlappyBird extends Prop {
}
