package Arcade;

import javafx.scene.Scene;
import javafx.scene.layout.Pane;

public class GUI {
    private Game game;
    private Pane layout;
    private Scene scene;

    public void start(){

    }

    public void createRectangle(){

    }

    public void createButton(){

    }

}
