package Arcade;

public interface GUIInterface {

    public void startGame();
}
