package Arcade;

import javafx.application.Application;
import javafx.stage.Stage;

public class Game extends Application {
    private int w;
    private int a;
    private int s;
    private int d;
    private int score;

    @Override
    public void start(Stage stage) throws Exception {

    }

    public void restartGame(){

    }

    public void returnToMenu(){

    }

    public void confirmDecision(){

    }

    public void pressedKeys(){

    }

    public void actionAndDisplay(){

    }


}
