package Arcade;

public class Login extends GUI{
    private String name;

    public void registerUser(){

    }

}
