package Arcade;

public class Menu extends GUI{

    public void startMenu(){

    }

    public void displayMenu(){

    }
}
