package Arcade;

import javafx.scene.image.Image;

public class Prop {
    private static Image image;

    public void createProp(){

    }

    public void displayProp(){

    }

}
