package Arcade.Snake;

import Arcade.Character;

public class CharacterSnake extends Character {
}
