package Arcade.Snake;

import Arcade.GUI;

public class GUISnake extends GUI {
}
