package Arcade.Snake;

import Arcade.Prop;

public class PropSnake extends Prop {
}
