package Arcade.Snake;

import Arcade.GUIInterface;
import Arcade.Game;

public class Snake extends Game implements GUIInterface {

    public void startGame(){

    }

}
