package Arcade;

public class Text {

    public void displayText(){

    }

}
