@startuml
!pragma layout smetana

class Main {

}

class Menu {
+ startMenu()
+ displayMenu()
}

class Text {
+ displayText()
}

class Login {
- String name
+ registerUser()
}

abstract class Game {
- int w
- int a
- int s
- int d
- int score
+ restartGame()
+ returnToMenu()
+ confirmDecision()
+ pressedKeys()
+ actionAndDisplay()
}

class Snake
class FlappyBird
class DinoGame

abstract class Application {
}

interface GUIInterface {
+ startGame()
}

abstract class GUI {
- Game game
- Pane layout
- Scene scene
+ start()
+ createRectangle()
+ createButton()
}

class GUISnake
class GUIFlappyBird
class GUIDinoGame


abstract class Character {
- static Image image
+ createCharacter()
+ displayCharacter()
}

class CharacterSnake
class CharacterFlappyBird
class CharacterDinoGame

abstract class Prop {
- static Image image
+ createProp()
+ displayProp()
}

class PropSnake
class PropFlappyBird
class PropDinoGame


Main ---> Login
Login --> Menu
Menu --> Game
Application --|> Game
GUI --|> Login
GUI --|> Menu
GUI --|> GUISnake
GUI --|> GUIFlappyBird
GUI --|> GUIDinoGame
PropSnake <|-- Prop
PropFlappyBird <|-- Prop
PropDinoGame <|-- Prop
CharacterSnake <|-- Character
CharacterFlappyBird <|-- Character
CharacterDinoGame <|-- Character
Game --|> Snake
Snake --> GUISnake
Snake --> CharacterSnake
Snake --> PropSnake
GUIInterface ..|> Snake
Game --|> FlappyBird
FlappyBird --> GUIFlappyBird
FlappyBird --> CharacterFlappyBird
FlappyBird --> PropFlappyBird
GUIInterface ..|> FlappyBird
Game --|> DinoGame
DinoGame --> GUIDinoGame
DinoGame --> CharacterDinoGame
DinoGame --> PropDinoGame
GUIInterface ..|> DinoGame


@enduml
